--- a/Vocab_ReadingsATHKArgumentsThinking.html
+++ b/Vocab_ReadingsATHKArgumentsThinking.html
@@ -369,7 +369,7 @@ summary {
 
 <div id="tutorial-overview" class="section level2">
 <h2>Tutorial overview</h2>
-<p>Week 9 tutorial: Necessary and sufficient, if-then, and only-if <a href="https://www.khanacademy.org/test-prep/lsat/lsat-lessons/logic-toolbox-new/a/logic-toolbox--article--if-x-then-y--sufficiency-and-necessity">explained by Khan academy</a></p>
+<p>Week 9 tutorial: Necessary and sufficient, if-then, and only-if <a href="https://www.khanacademy.org/test-prep/lsat/lsat-lessons/logic-toolbox-new/a/logic-toolbox--article--if-x-then-y--sufficiency-and-necessity">explained by Khan academy</a> and <a href="https://www.youtube.com/watch?v=ibjL90iY1d0">by Carneades</a></p>
 <p>Week 10 tutorial: Deductive and inductive arguments, suppositionally inescapable, inescapable, suppositionally strong, and strong.</p>
 <p>Week 11 tutorial: Arguments in the wild. Identifying conclusions and premises in real-world text and conversations.</p>
 </div>
@@ -431,26 +431,23 @@ Socrates is human.
 Therefore, Socrates is mortal."
 --></li>
 <li><p>Casting arguments <!-- Finding and isolating or diagramming the conclusion, premises and logical structure of an argument, usually from natural text --></p></li>
-<li><p><a href="https://dictionary.apa.org/nuisance-variable">Nuisance variable</a></p></li>
-<li><p>Necessary versus sufficient</p></li>
+<li><p>Necessary versus sufficient <!-- If A is necessary for B, every time you have B you have A. If A is sufficient for B, every time you have A you have B --></p></li>
 <li><p>Syllogism <!-- A simple argument comprised of a conclusion drawn from two given premises. --></p></li>
 <li><p>Syllogism form</p></li>
 <li><p>Truth table</p></li>
 <li><p>Redundant argument</p></li>
 <li><p>Casting an argument</p></li>
 <li><p>Suppositionally inescapable (also known as “valid”)</p></li>
-<li><p>Soundness</p></li>
+<li><p>Inescapable (also known as “sound”)</p></li>
 <li><p>Deduction</p></li>
 <li><p>Induction</p></li>
-<li><p>Strong</p></li>
-<li><p>Cogent</p></li>
+<li><p>Suppositionally solid (also known as “strong”)</p></li>
+<li><p>Solid (also known as “cogent”)</p></li>
 <li><p>Circularity</p></li>
 <li><p>dogmatism</p></li>
 <li><p>Survivorship</p></li>
 <li><p>Confabulation</p></li>
-</ul>
-<!-- Dissensus  -->
-<ul>
+<li><p>Dissensus and consensus</p></li>
 <li>Appeal to authority</li>
 <li>Straw man
 <ul>
@@ -463,7 +460,7 @@ Therefore, Socrates is mortal."
 <li>Confirmation bias</li>
 <li>Soldier mind</li>
 <li>My-side bias <!-- Confirmation bias, soldier mind, and my-side bias are practically synonyms --></li>
-<li><a href="https://alexholcombe.github.io/teachingATHK/readings/motivatedCognition.html">Motivated cognition</a></li>
+<li><p><a href="https://alexholcombe.github.io/teachingATHK/readings/motivatedCognition.html">Motivated cognition</a></p></li>
 </ul>
 </div>
 
