--- a/Vocab_ReadingsATHKstatsAndStudies.html
+++ b/Vocab_ReadingsATHKstatsAndStudies.html
@@ -367,8 +367,8 @@ summary {
 </div>
 
 
-<div id="the-links-below-might-not-work-unless-you-click-on-vocab-an-readings-at-the-top-of-this-window-to-escape-out-of-the-canvas-embedding" class="section level4">
-<h4>THE LINKS BELOW MIGHT NOT WORK UNLESS YOU CLICK ON “Vocab an readings” AT THE TOP OF THIS WINDOW, TO ESCAPE OUT OF THE CANVAS EMBEDDING</h4>
+<div id="the-links-below-might-not-work-until-you-click-on-vocab-and-readings-at-the-top-of-this-window-to-escape-out-of-the-canvas-embedding" class="section level4">
+<h4>THE LINKS BELOW MIGHT NOT WORK UNTIL YOU CLICK ON “Vocab and readings” AT THE TOP OF THIS WINDOW, TO ESCAPE OUT OF THE CANVAS EMBEDDING</h4>
 </div>
 <div id="important-readings" class="section level2">
 <h2>Important Readings</h2>
@@ -389,14 +389,12 @@ summary {
 <li><p><a href="https://alexholcombe.github.io/teachingATHK/readings/controllingForVsControl.html">Alex on the ways the word “control” is used</a> and random assignment.</p></li>
 <li><p>Another <a href="http://isps.yale.edu/node/16697">explanation of random assignment</a>.</p></li>
 <li><p><a href="http://www.statisticshowto.com/design-of-experiments/confounding-variable/">What is a confounding variable?</a></p></li>
-<li><p><a href="https://thenib.com/repeat-after-me/">Comic book</a> about p-hacking and publication bias and the “replication crisis” (for Week 9)</p></li>
 </ul>
 <!-- Critical Thinking, by Paul and Elder -->
 </div>
 <div id="not-so-important-readings" class="section level2">
 <h2>Not-so-important Readings</h2>
 <ul>
-<li><p><a href="https://youtu.be/0Rnq1NpHdmw?t=105">John Oliver video starting at 1:46</a> on p-hacking</p></li>
 <li><p>Chapter 4, Correlation, of <em>Naked Statistics</em> (already recommended by Bruce)</p></li>
 <li><p>To understand how regression can “control for” an extraneous variable, read <em>Naked Statistics</em> Chapter 11 and the “Highly correlated explanatory variables” in Ch.12.</p></li>
 <li><p><a href="http://blog.minitab.com/blog/adventures-in-statistics/regression-analysis-how-do-i-interpret-r-squared-and-assess-the-goodness-of-fit">r-squared</a></p></li>
@@ -411,9 +409,9 @@ summary {
 <li>Observational study. <!-- Study that is NOT an experiment (no experimenter manipulation of critical variable, or random assignment of people to one of e.g. two groups) --></li>
 <li>Quasi / natural experiment</li>
 <li>Random assignment (<a href="http://isps.yale.edu/node/16697">explainer</a>)</li>
-<li>r</li>
-<li>r-squared and shared variance</li>
-<li>Proportion of variance explained, shared variance <!-- Squaring r gives the proportion of variance explained by the line. "Shared variance" is a synonym.--></li>
+<li>r <!-- * r-squared and shared variance
+* Proportion of variance explained, shared variance
+ Squaring r gives the proportion of variance explained by the line. "Shared variance" is a synonym.--></li>
 </ul>
 <div id="variables" class="section level3">
 <h3>Variables</h3>
@@ -424,6 +422,7 @@ summary {
 <li>Confound or confounding variables <!-- Confounds are sometimes known as omitted variables in the context of observational studies or in the context of a statistical model like a regression. In experiment design, you might be interested in the effect of videogames on agression. You recruit a group of videogamers and another group of non-gamers and assess their agression level (somehow). You find that the videogamers are more agressive. Does this mean that videogaming causes agression? No, because you might have a confounding variable like age. Videogamers tend to be younger so your videogaming group may be younger than your non-gaming group. And, aggression levels decrease with age (and this was true even before videogames was invented), meaning that perhaps the only reason gamers are more violent is because they are younger. 
 http://www.statisticshowto.com/design-of-experiments/confounding-variable/
 --></li>
+<li><a href="https://dictionary.apa.org/nuisance-variable">Nuisance variable</a> or noise variable versus confound</li>
 <li>Omitted variable <!-- This term is used in the context of observational studies, where Bruce used it to refer to a problematic variable that in an experimental study would be referred to as
 a "confound"--></li>
 <li>“Controlling for” a variable</li>
@@ -443,6 +442,8 @@ Also explained in https://alexholcombe.wordpress.com/2016/02/03/problems-with-co
 <li>Contingency table</li>
 <li>Residual</li>
 <li>Nonlinear model</li>
+<li>False positive, true positive, false negative, true negative</li>
+<li>Specificity and sensitivity</li>
 </ul>
 </div>
 </div>
