--- a/Vocab_ReadingsATHKArgumentsThinking.html
+++ b/Vocab_ReadingsATHKArgumentsThinking.html
@@ -369,6 +369,7 @@ summary {
 
 <div id="tutorial-overview" class="section level2">
 <h2>Tutorial overview</h2>
+<p>Week 8 tutorial: Confounds</p>
 <p>Week 9 tutorial: Necessary and sufficient, if-then, and only-if <a href="https://www.khanacademy.org/test-prep/lsat/lsat-lessons/logic-toolbox-new/a/logic-toolbox--article--if-x-then-y--sufficiency-and-necessity">explained by Khan academy</a> and <a href="https://www.youtube.com/watch?v=ibjL90iY1d0">by Carneades</a></p>
 <p>Week 10 tutorial: Deductive and inductive arguments, suppositionally inescapable, inescapable, suppositionally strong, and strong.</p>
 <p>Week 11 tutorial: Arguments in the wild. Identifying conclusions and premises in real-world text and conversations.</p>
