--- a/Vocab_ReadingsATHKstatsAndStudies.html
+++ b/Vocab_ReadingsATHKstatsAndStudies.html
@@ -367,8 +367,8 @@ summary {
 </div>
 
 
-<div id="the-links-below-might-not-work-until-you-click-on-vocab-and-readings-at-the-top-of-this-window-to-escape-out-of-the-canvas-embedding" class="section level4">
-<h4>THE LINKS BELOW MIGHT NOT WORK UNTIL YOU CLICK ON “Vocab and readings” AT THE TOP OF THIS WINDOW, TO ESCAPE OUT OF THE CANVAS EMBEDDING</h4>
+<div id="the-links-below-might-not-work-until-you-click-on-readings-and-vocab-at-the-top-of-this-window-to-escape-out-of-canvas" class="section level4">
+<h4>THE LINKS BELOW MIGHT NOT WORK UNTIL YOU CLICK ON “Readings and vocab” AT THE TOP OF THIS WINDOW, TO ESCAPE OUT OF CANVAS</h4>
 </div>
 <div id="important-readings" class="section level2">
 <h2>Important Readings</h2>
@@ -402,11 +402,11 @@ summary {
 <li><p>TEDxDHFastStream - Dr Ben Goldacre talking about <a href="https://www.youtube.com/watch?v=RzRs7cPrrfE">randomised controlled trials for public policy</a></p></li>
 </ul>
 </div>
-<div id="vocabulary-partial-list-see-more-terms-on-the-outline" class="section level1">
-<h1>Vocabulary (partial list, see more terms on the outline)</h1>
+<div id="vocabulary-partial-list-see-more-terms-on-the-lectures-outline" class="section level1">
+<h1>Vocabulary (partial list, see more terms on the <a href="https://alexholcombe.github.io/teachingATHK/outline.html">Lectures outline</a>)</h1>
 <ul>
 <li>Correlation, used in this class to refer only to linear correlation.</li>
-<li>Observational study. <!-- Study that is NOT an experiment (no experimenter manipulation of critical variable, or random assignment of people to one of e.g. two groups) --></li>
+<li>Observational study. Observational studies are sometimes referred to as correlational studies. <!-- Study that is NOT an experiment (no experimenter manipulation of critical variable, or random assignment of people to one of e.g. two groups) --></li>
 <li>Quasi / natural experiment</li>
 <li>Random assignment (<a href="http://isps.yale.edu/node/16697">explainer</a>)</li>
 <li>r <!-- * r-squared and shared variance
