--- a/Vocab_ReadingsATHKstatsAndStudies.html
+++ b/Vocab_ReadingsATHKstatsAndStudies.html
@@ -399,8 +399,8 @@ summary {
 <li><p>TEDxDHFastStream - Dr Ben Goldacre talking about <a href="https://www.youtube.com/watch?v=RzRs7cPrrfE">randomised controlled trials for public policy</a></p></li>
 </ul>
 </div>
-<div id="vocabulary-partial-list-see-more-terms-on-the-lectures-outline" class="section level1">
-<h1>Vocabulary (partial list, see more terms on the <a href="https://alexholcombe.github.io/teachingATHK/outline.html">Lectures outline</a>)</h1>
+<div id="vocabulary-partial-list-see-more-on-the-lectures-outline" class="section level1">
+<h1>Vocabulary (partial list, see more on the <a href="https://alexholcombe.github.io/teachingATHK/outline.html">Lectures outline</a>)</h1>
 <ul>
 <li>Correlation, used in this class to refer only to linear correlation.</li>
 <li>Linear growth (black) versus exponential growth (blue).</li>
@@ -440,6 +440,7 @@ Also explained in https://alexholcombe.wordpress.com/2016/02/03/problems-with-co
 <ul>
 <li>Spurious correlation <!-- Correlation between X and Y that one might think is due to X causing Y, or Y causing X, but isn't --></li>
 <li>Causal model</li>
+<li>The <a href="https://apologetics.fandom.com/wiki/Third-cause_fallacy">third-cause fallacy</a></li>
 <li>Contingency table</li>
 <li>Residual</li>
 <li>Nonlinear model</li>
