--- a/Vocab_ReadingsATHKArgumentsThinking.html
+++ b/Vocab_ReadingsATHKArgumentsThinking.html
@@ -374,12 +374,12 @@ summary {
 <p>Week 10 tutorial: Deductive and inductive arguments, suppositionally inescapable, inescapable, suppositionally strong, and strong.</p>
 <p>Week 11 tutorial: Implicit premises, inductive arguments, identifying conclusions in real-world arguments</p>
 <p>Week 12 tutorial: Coupling of beliefs and real-world arguments</p>
-<p>Week 13 tutorial: Fallacies and</p>
+<p>Week 13 tutorial: Rhetoric and informal fallacies</p>
 </div>
 <div id="important-terminological-note" class="section level2">
 <h2>Important terminological note</h2>
-<p>Philosophers typically use “valid” and “sound” for describing deductive arguments, in this class we instead use the terms “suppositionally inescapable” and “inescapable” because they are easier to understand. On quizzes and tests, you will only be tested on these terms.</p>
-<p>Philosophers typically use “strong” and “cogent” for describing <em>inductive</em> arguments, but in this class we use the terms “suppositionally solid” and “solid” because they are easier to understand. On quizzes and tests, you will only be tested on these terms.</p>
+<p>Philosophers typically use “valid” and “sound” for describing deductive arguments, in this class we instead use the terms “suppositionally inescapable” and “inescapable” because they are easier to understand. On all assessments, you will only be tested on these terms.</p>
+<p>Philosophers typically use “strong” and “cogent” for describing <em>inductive</em> arguments, but in this class we use the terms “suppositionally solid” and “solid” because they are easier to understand. On all assessments, you will only be tested on these terms.</p>
 </div>
 <div id="important-readings" class="section level2">
 <h2>Important Readings</h2>
@@ -440,17 +440,18 @@ Therefore, Socrates is mortal."
 <li><p>Truth table</p></li>
 <li><p>Redundant argument</p></li>
 <li><p>Casting an argument</p></li>
-<li><p>Suppositionally inescapable (also known as “valid”)</p></li>
-<li><p>Inescapable (also known as “sound”)</p></li>
+<li><p>Suppositionally inescapable (known to philosophers as “valid”)</p></li>
+<li><p>Inescapable (known to philosophers as “sound”)</p></li>
 <li><p>Deduction</p></li>
 <li><p>Induction</p></li>
-<li><p>Suppositionally solid (also known as “strong”)</p></li>
-<li><p>Solid (also known as “cogent”)</p></li>
+<li><p>Suppositionally solid (known to philosophers as “strong”)</p></li>
+<li><p>Solid (known to philosophers as “cogent”)</p></li>
 <li><p>Circularity</p></li>
 <li><p>dogmatism</p></li>
 <li><p>Survivorship</p></li>
 <li><p>Confabulation</p></li>
 <li><p>Dissensus and consensus</p></li>
+<li><p>Slippery slope</p></li>
 <li>Appeal to authority</li>
 <li>Straw man
 <ul>
