--- a/Vocab_ReadingsATHKArgumentsThinking.html
+++ b/Vocab_ReadingsATHKArgumentsThinking.html
@@ -376,8 +376,8 @@ summary {
 <p>Week 12 tutorial: Coupling of beliefs and real-world arguments</p>
 <p>Week 13 tutorial: Rhetoric and informal fallacies</p>
 </div>
-<div id="important-terminological-note" class="section level2">
-<h2>Important terminological note</h2>
+<div id="terminological-note" class="section level2">
+<h2>Terminological note</h2>
 <p>Philosophers typically use “valid” and “sound” for describing deductive arguments, in this class we instead use the terms “suppositionally inescapable” and “inescapable” because they are easier to understand. On all assessments, you will only be tested on these terms.</p>
 <p>Philosophers typically use “strong” and “cogent” for describing <em>inductive</em> arguments, but in this class we use the terms “suppositionally solid” and “solid” because they are easier to understand. On all assessments, you will only be tested on these terms.</p>
 </div>
@@ -398,16 +398,16 @@ summary {
 <li><p><a href="https://open.umn.edu/opentextbooks/textbooks/introduction-to-logic-and-critical-thinking"><em>Introduction to Logic and Critical Thinking</em></a> by Van Cleave, Chapter 1, in particular 1.6 (Validity, which we call suppositional inescapability), 1.7 (Soundness, which we calll inescapability), 1.8 (Deductive vs. inductive arguments), 1.9 (Missing premises)</p></li>
 <li><p>Common logic mistake associated with <a href="https://www.logicallyfallacious.com/tools/lp/Bo/LogicalFallacies/14/Affirming-the-Consequent">affirming the consequent</a></p></li>
 <li><p>Common logic mistake associated with <a href="https://www.logicallyfallacious.com/tools/lp/Bo/LogicalFallacies/77/Denying-the-Antecedent">denying the antecedent</a></p></li>
-<li><p><em>Think Critically</em> by Facione, Chapter 6: Evaluate the Credibility of Claims and Sources, available from the eReserve link at left of Canvas</p></li>
+<li><p><em>Think Critically</em> by Facione, Chapter 6: Evaluate the Credibility of Claims and Sources, available from the Reading List link at left of Canvas</p></li>
 </ul>
 <!-- Critical Thinking, by Paul and Elder --></li>
-<li><p><a href="https://github.com/alexholcombe/teachingATHK/blob/master/ArgumentsOverview.docx?raw=true">Arguments overview</a></p></li>
 <li><p><a href="http://ideas.ted.com/why-you-think-youre-right-even-when-youre-wrong/">Galef on confirmation bias</a>, which she refers to as <strong>soldier mind</strong></p></li>
 </ul>
 </div>
 <div id="not-as-important-readings" class="section level2">
 <h2>Not-as-important Readings</h2>
 <ul>
+<li><p><a href="https://github.com/alexholcombe/teachingATHK/blob/master/ArgumentsOverview.docx?raw=true">Arguments overview</a></p></li>
 <li><p><em>The power of critical thinking</em> by Vaughn, Chapter 3.</p></li>
 <li><p><em>Critical thinking</em> by Bassham et al., Chapter 3. Basic logical concepts: deduction and induction.</p></li>
 <li><p><em>Critical thinking</em> by Bassham et al., Chapter on inductive reasoning (which is chapter 11 if you have the 4th edition)</p></li>
