--- a/Vocab_ReadingsATHKstatsAndStudies.html
+++ b/Vocab_ReadingsATHKstatsAndStudies.html
@@ -250,7 +250,7 @@ http://www.statisticshowto.com/design-of-experiments/confounding-variable/
 <li>Residual</li>
 <li>Nonlinear model</li>
 <li>False positive, true positive, false negative, true negative</li>
-<li>Specificity and sensitivity</li>
+<li><abbr title="Of those without what&#39;s being tested for, the proportion that correctly get a NEGATIVE test result. High specificity means low false positive rate">Specificity</abbr> and <abbr title="How often a test correctly generates a positive result for cases that have what&#39;s being tested for (also known as the &#39;true positive&#39; rate)">sensitivity</abbr></li>
 </ul>
 </div>
 </div>
