--- a/Vocab_ReadingsATHKArgumentsThinking.html
+++ b/Vocab_ReadingsATHKArgumentsThinking.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Vocab, readings for Alex’s arguments and fallacies lectures, and associated tutorials</title>
+<title>Vocab, readings for: Alex’s arguments, fallacies, and rhetoric lectures and associated tutorials (Weeks 9-13)</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -297,23 +297,17 @@ overflow-y: auto;
 border: 1px solid #ddd;
 border-radius: 4px;
 }
-.tabset-dropdown > .nav-tabs > li.active:before {
-content: "";
+.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+content: "\e259";
 font-family: 'Glyphicons Halflings';
 display: inline-block;
 padding: 10px;
 border-right: 1px solid #ddd;
 }
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-content: "";
-border: none;
-}
-.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-content: "";
+content: "\e258";
 font-family: 'Glyphicons Halflings';
-display: inline-block;
-padding: 10px;
-border-right: 1px solid #ddd;
+border: none;
 }
 .tabset-dropdown > .nav-tabs > li.active {
 display: block;
@@ -354,15 +348,16 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Vocab, readings for Alex’s arguments and
-fallacies lectures, and associated tutorials</h1>
-<h4 class="date">This will be updated as the lectures proceed.</h4>
+<h1 class="title toc-ignore">Vocab, readings for: Alex’s arguments,
+fallacies, and rhetoric lectures and associated tutorials (Weeks
+9-13)</h1>
+<h4 class="date">This may be updated as the weeks proceed.</h4>
 
 </div>
 
 
-<p>For the words on this page that are underlined with tiny dots, a
-short definition will pop up if you hover over the word with your mouse
+<p>For the words on this page underlined with tiny dots, a short
+definition will pop up if you hover over the word with your mouse
 pointer. Here’s an example:
 <abbr title="Alex is a middle-aged man who is lecturing from weeks 7 to 13.">Alex</abbr>.
 To study, first ask yourself on what the word means, and then check
@@ -458,13 +453,15 @@ crisis”</p></li>
 <div id="vocabulary" class="section level1">
 <h1>Vocabulary</h1>
 <ul>
-<li><abbr title="Bruce:&#39;Confounding factor is one that varies with both variables being considered and thus obscures their true relationship&#39;. Alex: In an experiment, a confound is something that is different for the different levels of the independent variable. Because it may affect the outcome variable, we don&#39;t know whether it is the confound or the independent variable causing any difference in the outcome variable.">Confound,
-confounding factor, or confound variable</abbr>.
+<li><p><abbr title="In a debate or argument, just contradicting the other&#39;s position without giving reasons">Simple
+contradiction</abbr></p></li>
+<li><p><abbr title="Bruce:&#39;Confounding factor is one that varies with both variables being considered and thus obscures their true relationship&#39;. Alex: In an experiment, a confound is something that is different for the different levels of the independent variable. Because it may affect the outcome variable, we don&#39;t know whether it is the confound or the independent variable causing any difference in the outcome variable.">Confound,
+confounding factor, or confound variable</abbr>.</p>
 <ul>
 <li>Something that varies with the variable whose effect one is
 interested in and thus obscures their true relationship</li>
 </ul></li>
-<li><abbr title="Usually a condensed syllogism where one premise is not explicitly stated. From Greek &#39;in-mind&#39;, because the argument being thought of is not fully stated.">Enthymeme</abbr></li>
+<li><p><abbr title="Usually a condensed syllogism where one premise is not explicitly stated. From Greek &#39;in-mind&#39;, because the argument being thought of is not fully stated.">Enthymeme</abbr></p></li>
 </ul>
 <!--  
 E.g., "Socrates is mortal because he's human." instead of the usual 
