--- a/Vocab_ReadingsATHKArgumentsThinking.html
+++ b/Vocab_ReadingsATHKArgumentsThinking.html
@@ -359,7 +359,7 @@ fallacies, and rhetoric lectures and associated tutorials (Weeks
 <p>For the words on this page underlined with tiny dots, a short
 definition will pop up if you hover over the word with your mouse
 pointer. Here’s an example:
-<abbr title="Alex is a middle-aged man who is lecturing from weeks 7 to 13.">Alex</abbr>.
+<abbr title="Alex is a middle-aged man who lectures in weeks 7 to 13.">Alex</abbr>.
 To study, first ask yourself on what the word means, and then check
 whether you’re right by hovering over the word.</p>
 <div id="tutorial-overview" class="section level2">
@@ -429,6 +429,10 @@ mind</strong></li>
 <div id="not-as-important-readings" class="section level2">
 <h2>Not-as-important Readings</h2>
 <ul>
+<li><p><a href="https://www.youtube.com/watch?v=KVl5kMXz1vA">“The most
+controversial ethics paper”</a> Youtube video. Great example of using
+logic to come to a surprising conclusion. The meat of the argument
+starts at <a href="https://www.youtube.com/watch?v=KVl5kMXz1vA&amp;t=680">11min20s</a>s.</p></li>
 <li><p><a href="https://github.com/alexholcombe/teachingATHK/blob/master/ArgumentsOverview.docx?raw=true">Arguments
 overview</a></p></li>
 <li><p><em>The power of critical thinking</em> by Vaughn, Chapter
@@ -509,12 +513,17 @@ Scotsman</a>
 <!-- No true Scotsman. An "ad hoc rescue" of a refuted generalization attempt--></p></li>
 <li><p><a href="https://en.wikipedia.org/wiki/Overwhelming_exception">Overwhelming
 exception</a> Patrick Stewart <a href="https://www.youtube.com/watch?v=ptfmAY6M6aA">example</a></p></li>
-<li><p>Confirmation bias</p></li>
-<li><p>Soldier mind</p></li>
-<li><p>My-side bias
-<!-- Confirmation bias, soldier mind, and my-side bias are practically synonyms --></p></li>
-<li><p><a href="https://alexholcombe.github.io/teachingATHK/readings/motivatedCognition.html">Motivated
-cognition</a></p></li>
+<li><p>The following terms are all closely related</p>
+<ul>
+<li><abbr title="the tendency to search for, interpret, favor, and recall information in a way that confirms or supports one&#39;s prior beliefs or values.">Confirmation
+bias</abbr></li>
+<li><abbr title="We focus on fortifying our case and shooting down the other party’s points. Changing your mind feels like surrendering or being defeated.">Soldier
+mind</abbr></li>
+<li>My-side bias
+<!-- Confirmation bias, soldier mind, and my-side bias are practically synonyms --></li>
+<li><a href="https://alexholcombe.github.io/teachingATHK/readings/motivatedCognition.html">Motivated
+cognition</a></li>
+</ul></li>
 </ul>
 </div>
 
