--- a/inDepth/causalWords.html
+++ b/inDepth/causalWords.html
@@ -62,6 +62,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
+<p>Below is a list of some common words that are used to communicate causation.</p>
 <table class="table">
 <colgroup>
 <col style="width: 16%">
@@ -156,6 +157,8 @@ ul.task-list li input[type="checkbox"] {
 </tr>
 </tbody>
 </table>
+<p><br><br><br></p>
+<p>There are more words used to communicate causation, but the above are the most common ones (see e.g.&nbsp;<a href="https://pubmed.ncbi.nlm.nih.gov/35925053/">“Causal and Associational Language in Observational Health Research: A Systematic Evaluation”</a> )</p>
 
 </main>
 <!-- /main column -->
